--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
+  <meta name="Keywords" content="台大經濟營、臺大經濟營、臺大、2021營隊、經濟營、2021暑期營、2021夏令營、2021臺大營隊、台大營隊">
   <title>2021台大經濟營 NTU ECONCamp</title>
 
   <!-- Bootstrap Core CSS -->
