--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -141,7 +141,7 @@
       <h3 class="mb-0 " style="font-size: 20px;color: #1b3c71;">Registration</h3>
       <h2 class="mx-auto mb-5 ">報名資訊</h2>
         
-      <h3 class="mx-auto mb-5 " > 營隊費用<br>───────<br>新台幣7000元整 <br>(另有清寒全額補助名額）<br>───────<br>
+      <h3 class="mx-auto mb-5" style="font-size: 20px;" > 營隊費用<br>───────<br>新台幣7000元整 <br>(另有清寒全額補助名額）<br>───────<br>
         活動地點<br>───────<br>台大校總區、台大社會科學院<br>───────<br>
         
         活動日期<br>───────<br>2021/7/5(一) ~ 2021/7/9(五)<br>───────<br>
