--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -154,7 +154,7 @@
         
         </h3>  
       <a class="btn btn-primary btn-xl" style="font-size: 20px;" href="">立即報名</a>   <!--報名表單-->
-      <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio" style="font-size: 20px;background-color: #ef3f49;color: white;">更多活動介紹</a> 
+      <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio" style="font-size: 20px;background-color: #ef3f49;color: white;">活動介紹</a> 
     </div>
   </section>
 
