--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -226,7 +226,8 @@
   <!-- Call to Action -->
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
-      <h2 class="mb-4">台大經濟營</h2>
+      <h2 class="mb-4">更多資訊</h2>
+      <h2 class="mb-4">Comming Soon</h2>
             <!--<a href="#!" class="btn btn-xl btn-light mr-4">Check FAQ</a>
       <a href="#!" class="btn btn-xl btn-dark">Contact us</a>-->
     </div>
