--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -152,13 +152,13 @@
         <p class="lead mb-5">總召劉詠晴　0935080466<br>
               副召葉冠萱　0983320575<br>
               副召許展維　0988845159<br></p>
-      <a class="btn btn-primary btn-xl" style="font-size: 20px;" href="">立即報名</a>   <!--報名表單-->
+      <a class="btn btn-primary btn-xl js-scroll-trigger" style="font-size: 20px;" href="#space">立即報名</a>   <!--報名表單-->
       <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio" style="font-size: 20px;background-color: #ef3f49;color: white;">活動介紹</a> 
     </div>
   </section>
 
    <!-- space -->
-  <section class="content-section text-white " style="background-color: #f5a83c;">
+  <section class="content-section text-white " id="space" style="background-color: #f5a83c;">
     <div class="container text-center">
       <h2 class="mb-4">報名尚未開放</h2>
             <!--<a href="#!" class="btn btn-xl btn-light mr-4">Check FAQ</a>
