--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -141,9 +141,13 @@
       <h3 class="mb-0 " style="font-size: 20px;color: #1b3c71;">Registration</h3>
       <h2 class="mx-auto mb-5 ">報名資訊</h2>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >營隊費用<br>───────</h3>
-        <p class="lead mb-5">新台幣7000元整 <br>(另有清寒全額補助名額）</p>
+        <p class="lead mb-5">新台幣7000元整 <br>(另有5名清寒全額補助名額，確定錄取後將另行通知學員提供相關證明）</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >活動地點<br>───────</h3>
         <p class="lead mb-5">台大校總區、台大社會科學院</p>
+        <h3 class="mx-auto mb-5" style="font-size: 20px;" >住宿地點<br>───────</h3>
+        <p class="lead mb-5">星盒青年旅館 - 雀爾喜精品旅館</p>
+        <h3 class="mx-auto mb-5" style="font-size: 20px;" >報名對象<br>───────</h3>
+        <p class="lead mb-5">全國入學/在學/應屆高中高職生</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >活動日期<br>───────</h3>
         <p class="lead mb-5">2021/7/5(一) ~ 2021/7/9(五)</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" > 報名時間<br>───────</h3>
@@ -152,15 +156,19 @@
         <p class="lead mb-5">總召劉詠晴　0935080466<br>
               副召葉冠萱　0983320575<br>
               副召許展維　0988845159<br></p>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" style="font-size: 20px;" href="#space">立即報名</a>   <!--報名表單-->
-      <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio" style="font-size: 20px;background-color: #ef3f49;color: white;">活動介紹</a> 
+     
     </div>
   </section>
 
    <!-- space -->
   <section class="content-section text-white " id="space" style="background-color: #f5a83c;">
     <div class="container text-center">
-      <h2 class="mb-4">報名尚未開放</h2>
+      
+      <h2 class="lead mb-5" style="font-size: 25px;">鑒於疫情的難以預測，<br>
+        我們不排除營期延後、甚至停辦的可能性，<br>
+            一切以政府政策公告為準，若活動安排有任何更動，會再行公佈。</h2>
+       <a class="btn btn-primary btn-xl " style="font-size: 20px;" href="https://reurl.cc/qmre0n">立即報名</a>   <!--報名表單-->
+      <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio" style="font-size: 20px;background-color: #ef3f49;color: white;">活動介紹</a> 
             <!--<a href="#!" class="btn btn-xl btn-light mr-4">Check FAQ</a>
       <a href="#!" class="btn btn-xl btn-dark">Contact us</a>-->
     </div>
