--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -62,7 +62,8 @@
       <h3 class="mb-5">
         <em></em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">更多資訊</a>
+      <a class="btn btn-light btn-xl "  style="font-size: 20px;background-color: #ef3f49;color: white;" href="https://reurl.cc/qmre0n">立即報名</a>
     </div>
     <div class="overlay"></div>
   </header>
