--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -187,7 +187,7 @@
           <a class="portfolio-item" href="#!" >
             <div class="caption">
               <div class="caption-content">
-                <div class="h2"  >Comming Soon</div><!--活動標題-->
+                <div class="h2"  >Coming Soon</div><!--活動標題-->
                 <p class="mb-0"></p> <!--活動介紹文字-->
               </div>
             </div>
@@ -235,7 +235,7 @@
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
       <h2 class="mb-4">更多資訊</h2>
-      <h2 class="mb-4">Comming Soon</h2>
+      <h2 class="mb-4">Coming Soon</h2>
             <!--<a href="#!" class="btn btn-xl btn-light mr-4">Check FAQ</a>
       <a href="#!" class="btn btn-xl btn-dark">Contact us</a>-->
     </div>
