--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -129,7 +129,7 @@
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">Activity</h3>
         <h2 class="mb-5" >營期時程</h2>
-        <h2 class="mb-5">Comming Soon</h2>
+        <h2 class="mb-5">Coming Soon</h2>
         <a class="btn btn-light btn-xl js-scroll-trigger" href="#callout" style="font-size: 20px;background-color: #f5a83c;">報名資訊</a>  
       </div>
       
