--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -146,7 +146,7 @@
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >活動地點<br>───────</h3>
         <p class="lead mb-5">台大校總區、台大社會科學院</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >住宿地點<br>───────</h3>
-        <p class="lead mb-5">星盒青年旅館 - 雀爾喜精品旅館</p>
+        <p class="lead mb-5">米尼旅店</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >報名對象<br>───────</h3>
         <p class="lead mb-5">全國入學/在學/應屆高中高職生</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >活動日期<br>───────</h3>
