--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -227,7 +227,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="">
+          <a class="portfolio-item" href="https://NTUEconCamp.github.io/activity/營包遊戲.html">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2"></div><!--活動標題-->
