--- a/activity/企業參訪.html
+++ b/activity/企業參訪.html
@@ -25,11 +25,11 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class=" lh-1 mb-4">企業參訪</h1>
                     <p class="mb-5">
-                        在台深耕數十載的兆豐銀行為兆豐金控旗下之旗艦企業，數年來秉持著成為亞洲區域性金融集團的願景，懷抱專業熱忱、服務用心的信念，
-                        從客戶角度出發並順應市場趨勢，兆豐多年來獲無數獎項，深受客戶信賴，且作為體質良好之金融機構，屢屢在信用評等中斬獲佳績，
-                        2020年受英國銀行家雜誌〈The Banker〉評選為2020年度「台灣最佳銀行」，2021年獲得信用評等機構中華信評的「twAAA」評價。<br><br>
-                        此外，兆豐銀行亦積極落實 企業永續（ESG）理念，推行各項節能減碳措施、支持再生能源發展，並為社會各階層與群體提供金融友善服務，如設立無障礙自動櫃員機、提供安養信託服務等。
-                        整合專業金融服務與ESG永續願景，兆豐銀行將繼續發揮其正向影響力，偕同社會前行。
+                        在台深耕數十載的兆豐銀行為兆豐金控旗下之<br>旗艦企業，數年來秉持著成為亞洲區域性金融<br>集團的願景，懷抱專業熱忱、服務用心的信念，
+                        從客戶角度出發並順應市場趨勢，兆豐多年來獲無數獎項，深受客戶信賴，且作為體質良好之<br>金融機構，屢屢在信用評等中斬獲佳績，
+                        2020年受英國銀行家雜誌〈The Banker〉評選為2020<br>年度「台灣最佳銀行」，2021年獲得信用評等<br>機構中華信評的「twAAA」評價。<br><br>
+                        此外，兆豐銀行亦積極落實企業永續（ESG）<br>理念，推行各項節能減碳措施、支持再生能源<br>發展，並為社會各階層與群體提供金融友善<br>服務，如設立無障礙自動櫃員機、提供安養<br>信託服務等。
+                        整合專業金融服務與ESG<br>永續願景，兆豐銀行將繼續發揮其正向影響力，偕同社會前行。
                         </p>
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
