--- a/activity/營包遊戲.html
+++ b/activity/營包遊戲.html
@@ -27,9 +27,9 @@
                     <p class="mb-5">
                         各位病毒朋友們好：
                         恭喜你們順利逃脫實驗室的掌控，你們的任務是入侵各國，感染全人類！<br> <br>
-                        要在這長期戰役中獲勝，除了升級工廠提升你們的能力值外，還必須透過存入銀行的利息、從感染者身上獲得穩定的能量來源。
-                        也許與他種病毒合作也是好方法，該如何進行組間談判、如何擬定策略，就必須靠小隊員們集思廣益。
-                        另外，大自然的力量可怕且不可預測，每次的隨機事件，對各位來說是吉是凶。<br><br>
+                        要在這長期戰役中獲勝，除了升級工廠提升你們的能力值外，還必須透過存入銀行的利息、<br>從感染者身上獲得穩定的能量來源。
+                        也許與<br>他種病毒合作也是好方法，該如何進行組間<br>談判、如何擬定策略，就必須靠小隊員們<br>集思廣益。
+                        另外，大自然的力量可怕且不可<br>預測，每次的隨機事件，對各位來說是吉是凶。<br><br>
                         在這五天四夜的營期中，究竟哪種病毒能夠制霸全球，就看各個小組如何利用手邊的資源，制定出最佳策略了！
                         </p>
                     <!-- * * * * * * * * * * * * * * *-->
