--- a/activity/策略遊戲.html
+++ b/activity/策略遊戲.html
@@ -23,7 +23,7 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class=" lh-1 mb-4">企業參訪</h1>
+                    <h1 class=" lh-1 mb-4">策略遊戲</h1>
                     <p class="mb-5">
                         在講求團隊合作的年代，如果連讀書考試都和<br>別人一起合作，是不是可以事半功倍呢？<br><br>
                         在策略遊戲中，所有小隊會被分成兩個班級，<br>每個小隊有自己擅長的項目，每回合就是一場<br>考試。
