--- a/activity/經濟大挑戰.html
+++ b/activity/經濟大挑戰.html
@@ -23,7 +23,7 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class=" lh-1 mb-4">企業參訪</h1>
+                    <h1 class=" lh-1 mb-4">經濟大挑戰</h1>
                     <p class="mb-5">
                         巍峨聳立的高樓在台北市一座座被建起。<br>風光繁華的都市建築群背後，
                         暗藏著多少<br>建設公司進行著爭奪土地、佔有建材、<br>規避風險等複雜的商業角力？<br>
