--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -145,21 +145,22 @@
       <h3 class="mb-0 " style="font-size: 20px;color: #1b3c71;">Registration</h3>
       <h2 class="mx-auto mb-5 ">報名資訊</h2>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >營隊費用<br>───────</h3>
-        <p class="lead mb-5">新台幣7000元整 <br>(另有5名清寒全額補助名額，確定錄取後將另行通知學員提供相關證明）</p>
+        <p class="lead mb-5" style="font-size: 27px;">新台幣7000元整 </p>
+        <p class="lead mb-5" style="font-size: 20px;"> (另有5名清寒全額補助名額，確定錄取後將另行通知學員提供相關證明）</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >活動地點<br>───────</h3>
-        <p class="lead mb-5">台大校總區、台大社會科學院</p>
+        <p class="lead mb-5" style="font-size: 27px;">台大校總區、台大社會科學院</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >住宿地點<br>───────</h3>
-        <p class="lead mb-5">米尼旅店</p>
+        <p class="lead mb-5" style="font-size: 27px;">米尼旅店</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >報名對象<br>───────</h3>
-        <p class="lead mb-5">全國入學/在學/應屆高中高職生</p>
+        <p class="lead mb-5" style="font-size: 27px;">全國入學/在學/應屆高中高職生</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >招收人數<br>───────</h3>
-        <p class="lead mb-5">40名暑假經濟營保證名額+80名全新招收名額，共120名(含清寒補助名額)</p>
+        <p class="lead mb-5" style="font-size: 23px;">40名暑假經濟營保證名額+80名全新招收名額，共120名(含清寒補助名額)</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >活動日期<br>───────</h3>
-        <p class="lead mb-5">2022/1/25(二) ~ 2021/1/29(六)</p>
+        <p class="lead mb-5" style="font-size: 27px;">2022/1/25(二) ~ 2021/1/29(六)</p>
         <h3 class="mx-auto mb-5" style="font-size: 20px;" > 報名時間<br>───────</h3>
-        <p class="lead mb-5">2021/11/1(一) ~ 2021/12/6(一)23：59</p>        
+        <p class="lead mb-5" style="font-size: 27px;">2021/11/1(一) ~ 2021/12/6(一)23：59</p>        
         <h3 class="mx-auto mb-5" style="font-size: 20px;" >聯絡資訊<br>───────</h3>
-        <p class="lead mb-5">總召劉詠晴　0935080466<br>
+        <p class="lead mb-5" style="font-size: 23px;">總召劉詠晴　0935080466<br>
               副召葉冠萱　0983320575<br>
               副召許展維　0988845159<br></p>
      
