--- a/activity/企業參訪.html
+++ b/activity/企業參訪.html
@@ -40,10 +40,11 @@
                     <!-- to get an API token!-->
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <!-- Email address input-->
-                        <div class="row input-group-newsletter">
-                            
-                            <div class="col-auto"> <a class="btn btn-primary "   href='https://NTUEconCamp.github.io/homepage/2021econcamp.html'>回首頁</a></div>
-                            <div class="col-auto"><a class="btn btn-primary "  >策略遊戲</a></div>
+                        <div class="row input-group-newsletter">                            
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/homepage/2021econcamp.html'>回首頁</a></div>
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/策略遊戲.html'>策略遊戲</a></div>
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/營包遊戲.html'>營包遊戲</a></div>
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/經濟大挑戰.html'>經濟大挑戰</a></div>
                         </div>
                         
                         <!-- Submit success message-->
