--- a/activity/營包遊戲.html
+++ b/activity/營包遊戲.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>NTU Econ Camp Activity-營包遊戲</title>
+        <title>Coming Soon - Start Bootstrap Theme</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -41,10 +41,11 @@
                     <!-- to get an API token!-->
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <!-- Email address input-->
-                        <div class="row input-group-newsletter">
-                            
-                            <div class="col-auto"> <a class="btn btn-primary "   href='https://NTUEconCamp.github.io/homepage/2021econcamp.html'>回首頁</a></div>
-                            <div class="col-auto"><a class="btn btn-primary "  >策略遊戲</a></div>
+                        <div class="row input-group-newsletter">                          
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/homepage/2021econcamp.html'>回首頁</a></div>
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/企業參訪.html'>企業參訪</a></div>
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/策略遊戲.html'>策略遊戲</a></div>
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/經濟大挑戰.html'>經濟大挑戰</a></div>
                         </div>
                         
                         <!-- Submit success message-->
