--- a/homepage/2021econcamp.html
+++ b/homepage/2021econcamp.html
@@ -209,7 +209,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="">
+          <a class="portfolio-item" href="https://NTUEconCamp.github.io/activity/經濟大挑戰.html">
             <div class="caption">
               <div class="caption-content ">
 
@@ -234,7 +234,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="">
+          <a class="portfolio-item" href="https://NTUEconCamp.github.io/activity/策略遊戲.html">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2"></div>
