--- a/activity/策略遊戲.html
+++ b/activity/策略遊戲.html
@@ -42,7 +42,7 @@
                         <!-- Email address input-->
                         <div class="row input-group-newsletter">
                             <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/homepage/2021econcamp.html'>回首頁</a></div>
-                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/企業參訪.html'>企業參訪</a></div>
+                            <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/homepage/2021econcamp.html'>企業參訪</a></div>
                             <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/營包遊戲.html'>營包遊戲</a></div>
                             <div class="col-auto"><a class="btn btn-primary" href='https://NTUEconCamp.github.io/activity/經濟大挑戰.html'>經濟大挑戰</a></div>
                         </div>
